# min-agent-deploy

./: .gitignore  README.md  brainstorming.md  package-lock.json  package.json
app/: layout.tsx  page.tsx
app/ai/: page.tsx
app/components/: GmailAccount.tsx  mail-setup.tsx  sidebar.tsx
app/connect/: page.tsx
backend-python/: .gitignore  README.md  main.py  pyproject.toml
backend-python/api/: main.py
backend-python/ara/: CLAUDE.md  example_behaviors.py  pyproject.toml
backend-python/ara/src/ara/: __init__.py  logging.py  server.py
backend-python/ara/src/ara/agent/: core.py
backend-python/ara/src/ara/behaviors/: base.py  knowledge_management.py  planning.py
backend-python/ara/src/ara/ui/: live_display.py  terminal.py  textual_display.py
backend-python/services/: agents.py
frontend-nextjs/: .env.example  .gitignore  docker-compose.dev.yml  drizzle.config.ts  package.json  setup-dev-local.sh  tsconfig.json
frontend-nextjs/app/: globals.css
frontend-nextjs/drizzle/: 0000_same_dragon_man.sql  0001_narrow_marvel_zombies.sql  0002_loose_maverick.sql
frontend-nextjs/lib/: utils.ts
frontend-nextjs/scripts/: apply-migration.ts  (+2 more)
general-browser/: .gitignore  browser-extension-specs.md  package.json  tailwind.config.js  wxt.config.ts
test-assembler/: .gitignore  CLAUDE.md  README_SIERRA.md  analyze.py  demo.py  main.py  pyproject.toml  test_analyze.py  test_simple.py
test-assembler/notebooks/: llm_pipeline_test.ipynb  simple_pipeline_test.ipynb  test_hot_reload.ipynb
test-assembler/test_knowledge/: timeline.db
try1/: pyproject.toml
(+126 files in other folders)
