[project]
name = "test-assembler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ara",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "notebook>=7.4.4",
]

[tool.uv.sources]
ara = { path = "packages/ara", editable = true }
